--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,14 @@
 body {
-  background-color: white;
+  background: linear-gradient(
+    112.4deg,
+    rgb(176, 174, 225) 44.9%,
+    rgb(135, 197, 235) 94.5%
+  );
   font-family: Arial, Helvetica, sans-serif;
 }
 .container {
-  max-width: 600px;
+  max-width: 500px;
+  height: 400px;
   background: aliceblue;
   border-radius: 10px;
   margin: 50px auto;
@@ -18,6 +23,7 @@ h2 {
   margin: 0px 0px 5px;
   font-size: 25px;
 }
+
 select {
   display: block;
   width: 100%;
